# chakra-qml

./: .gitattributes  .gitignore  MANIFEST.in  README.md  README.zh-CN.md  main.py  pyproject.toml
demo/: README.md  button.qml  demo.qml  framless.qml  main.py
docs/: COMPONENT_ISSUES.md  PUBLISHING.md  USAGE.md  发布指南.md
docs/components/: CHoverCard.md  CSwitch.md  README.md
docs/other/: API.md  QUICK_REFERENCE.md  USAGE.md  fix-qml-chinese-output.md
example/: app.qml
examples/: icons.py  main.py
gallery/: index.qml
gallery/sections/: DemoButtons.qml  DemoCards.qml  DemoHoverCard.qml  DemoIcons.qml  DemoInputs.qml  DemoLayouts.qml  DemoPagination.qml  DemoScrollArea.qml  qmldir
source/: source.qrc  source_rc.py
src/: __init__.py
src/Chakra/: AppStyle.qml  CAlert.qml  CButton.qml  CCard.qml  CCheckbox.qml  CDialog.qml  CDrawer.qml  CFrameless.py  CHoverCard.qml  CInput.qml  CMenu.qml  CMenuItem.qml  CProgress.qml  CSegmentedControl.qml  CSelect.qml  CSwitch.qml  CTag.qml  CTooltip.qml  CWindow.qml  CWindowControls.qml  __init__.py  qmldir
src/pages/: index.qml
src/pages/sections/: DemoActionBar.qml  DemoBadgeTags.qml  DemoButtons.qml  DemoCards.qml  DemoFeedback.qml  DemoIcons.qml  DemoInputs.qml  DemoLayouts.qml  DemoMenu.qml  DemoOverlays.qml  DemoPagination.qml  DemoProgress.qml  DemoScrollArea.qml  (+4 more)
tests/: README.md  run_python_tests.py  run_qml_tests.py
tests/python/: test_frameless.py
tests/qml/: tst_CButton.qml  tst_CCheckbox.qml  tst_CInput.qml
utils/: README.md  pyproject.toml
utils/src/utils/: __init__.py  update_resource.py
